<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:id="@+id/container"
       app:layout_constraintBottom_toBottomOf="parent"
       android:layout_width="match_parent"
       android:orientation="vertical"
       android:layout_height="wrap_content">

       <LinearLayout
           android:paddingHorizontal="18dp"
           android:paddingVertical="6dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_clear"
               android:onClick="onNumberClick"
               android:text="@string/ac"
               style="@style/Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:text="@string/oper_sum"
               android:layout_marginHorizontal="18dp"
               style="@style/Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:text="@string/procent"
               android:layout_marginEnd="18dp"
               style="@style/Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_division"
               android:onClick="onOperationClick"
               android:text="@string/division"
               style="@style/Orange.Button"/>

       </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="@dimen/page_margin"
            android:paddingVertical="@dimen/page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                android:onClick="onNumberClick"
                android:text="@string/seven"
                style="@style/Dark.Gray.Button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                android:text="@string/eight"
                android:layout_marginHorizontal="@dimen/page_margin"
                style="@style/Dark.Gray.Button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"
                android:text="@string/nine"
                android:layout_marginEnd="@dimen/page_margin"
                style="@style/Dark.Gray.Button"/>

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_x"
                android:text="@string/oper_x"
                style="@style/Orange.Button"/>

        </LinearLayout>

       <LinearLayout
           android:paddingHorizontal="@dimen/page_margin"
           android:paddingVertical="@dimen/page"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_four"
               android:onClick="onNumberClick"
               android:text="@string/four"
               style="@style/Dark.Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_five"
               android:onClick="onNumberClick"
               android:text="@string/five"
               android:layout_marginHorizontal="@dimen/page_margin"
               style="@style/Dark.Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_six"
               android:onClick="onNumberClick"
               android:text="@string/six"
               android:layout_marginEnd="@dimen/page_margin"
               style="@style/Dark.Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_minus"
               android:onClick="onOperationClick"
               android:text="@string/minus"
               style="@style/Orange.Button"/>

       </LinearLayout>

       <LinearLayout
           android:paddingHorizontal="@dimen/page_margin"
           android:paddingVertical="@dimen/page"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_one"
               android:onClick="onNumberClick"
               android:text="@string/one"
               style="@style/Dark.Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_two"
               android:onClick="onNumberClick"
               android:text="@string/two"
               android:layout_marginHorizontal="@dimen/page_margin"
               style="@style/Dark.Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_three"
               android:onClick="onNumberClick"
               android:text="@string/three"
               android:layout_marginEnd="@dimen/page_margin"
               style="@style/Dark.Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:onClick="onOperationClick"
               android:id="@+id/btn_plus"
               android:text="@string/plus"
               style="@style/Orange.Button"/>

       </LinearLayout>

       <LinearLayout
           android:paddingHorizontal="@dimen/page_margin"
           android:paddingVertical="@dimen/page"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_zero"
               android:onClick="onNumberClick"
               android:text="@string/zero"
               style="@style/Dark.Gray.Button"
               android:textAlignment="textStart"
               android:paddingStart="@dimen/start_padd"
               android:layout_width="178dp"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/tochka"
               android:onClick="onNumberClick"
               android:text="@string/tochka"
               android:layout_marginHorizontal="@dimen/page_margin"
               style="@style/Dark.Gray.Button"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_res"
               android:onClick="onOperationClick"
               android:text="@string/oper_res"
               style="@style/Orange.Button"/>

       </LinearLayout>

   </LinearLayout>

    <FrameLayout
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginHorizontal="34dp"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:text="@string/number_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>






</androidx.constraintlayout.widget.ConstraintLayout>